[package]
name = "kaspa_sig"
version = "0.1.0"
edition = "2024"
description = "Kaspa Lattice Signature - post-quantum signing with BLAKE3, GZIP, and Base58"

[[bin]]
name = "kaspa_sig"
path = "src/main.rs"

[dependencies]
rand       = "0.8"
rand_distr = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
blake3     = { version = "1", features = ["traits-preview"] }
flate2     = "1"
hex        = "0.4"
bs58       = "0.5"

[profile.release]
opt-level = 3
